InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyTier__c/vlocity_ins__FormularyTier__c.object-meta.xml
<CustomObject>
    <description>Categorization of formulary drugs into cost based tiers. A typical drug benefit includes three or four tiers: Tier 1 usually includes generic medications. Tier 2 usually includes preferred brand name medications. Tier 3 usually includes non-preferred brand name medications.</description>
    <label>Formulary Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formulary Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>