InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyTier__c/fields/vlocity_ins__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Description__c</fullName>
    <description>The long description related to the Formulary Tier.</description>
    <inlineHelpText>The long description related to the Formulary Tier.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>