InsuranceOrg/force-app/main/default/objects/vlocity_ins__FormularyTier__c/listViews/vlocity_ins__All.listView-meta.xml
<ListView>
    <fullName>vlocity_ins__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_ins__IsActive__c</columns>
    <columns>vlocity_ins__CoPayPercent__c</columns>
    <columns>vlocity_ins__CoPayAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>